maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:6: error: not found: value random
      random = random3()
      ^RandomMouseMaze:7: error: not found: value random
      if(random==0 && !estFaceMur())
         ^RandomMouseMaze:11: error: not found: value random
      if(random==1)
         ^RandomMouseMaze:15: error: not found: value random
      if(random==2)
         ^